2005-04-20 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b8

	* Fix: Wrong use of check for itemOwner caused error 
	       when user wants to see all comments in some circumstances.

2005-04-19 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b7

	* Fix: Wrong require in setup let Gallery config break on debian (thanks to tomukas)

	* Fix: critical typo in classes/Album.php

2005-04-19 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b6

	* Change: Use Name and Email of logged in users as default for Sender in ecards.

	* Change: Added Subject line for ecards.

	* Fix: ecard enable/disable setting was not set for nested albums.

2005-04-18 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b5

	* Change: Added new parameter to makeIconMenu for alignment

	* Change: Use IconMenu in view_photo for adminText

	* Change: Make eCards an album option. (needs album version bump)

	* Fix: Added ecard_form.php to allowed include list.

	* Change: Little layout, text and css and html validation for ecard_form.php

	* Fix: ecards opened popup with environment when Gallery is embedded.

2005-04-18 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b4

	* Fix: removed little debug code.

2005-04-17 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b3

	* Fix: invalid css in standalone css and some skins. (Thanks to pixelpoet)

	* Change: Added cellpadding="0" cellspacing="0" to starting tables in html_wrap/*.header.default

2005-04-16 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b2

	* Fix: HTML validation in view_photo.php, login.php

	* Change: Added parameter to drawSelect for pretty printing.

	* Change: Album properties are displayed in tabs.

	* CHANGE: data structure of print services.
		  reconfig forced and album version bumped.

	  Note: code not finished ! Previous Values from config for print services not used.

	* Change: eCard template changes 

	* Change: Modified eCard feature... 

	* Change: Show Albumnames in pulldown for reorder album.

	* New: Added eCard Feature. (not completed yet.)
