@@ -1,3 +1,7 @@
+2005-04-20 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b9
+
+	* Fix: Create user were b0rked since b2.
+
 2005-04-20 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b8
 
 	* Fix: Wrong use of check for itemOwner caused error 
